<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="Datenverarbeitung">

        <SwitchPreference
                android:title="Datensparmodus"
                android:summary="Die angezeigten Bilder werden intern auf dem Gerät gespeichert und lokal abgerufen."
                android:defaultValue="true"
                android:key="save_images"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="Benachrichtigung">

<!--        <RingtonePreference-->
<!--                android:showDefault="true"-->
<!--                android:showSilent="true"-->
<!--                android:key="ringtone"-->
<!--                android:defaultValue="content://settings/system/notification_sound"-->
<!--                android:summary="Wähle einen Ton, der wiedergegeben wird, wenn du eine neue Benachrichtigung empfangen hast."-->
<!--                android:title="Benachrichtigungston"-->
<!--                android:ringtoneType="notification"/>-->

        <SwitchPreferenceCompat
                android:title="Vibration"
                android:key="vibration"
                android:summary="Hinweis beim Empfangen einer neuen Benachrichtigung durch die Vibration des Gerätes"
                android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/about_examshare">

        <Preference
                android:title="@string/imprint"
                android:key="imprint"/>

        <Preference
                android:title="@string/privacy_policy"
                android:key="privacy_policy"/>

    </PreferenceCategory>

</PreferenceScreen>