<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="de.twisted.examshare.util.validation.rules.ValidationEmptyRule" />

        <variable
                name="viewModel"
                type="de.twisted.examshare.ui.signin.SignInViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fadeScrollbars="false"
            android:scrollbarFadeDuration="0"
            tools:context="de.twisted.examshare.ui.signin.SignInActivity">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="172dp"
                    android:layout_height="159dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logo_without_text" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/identifier_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/identifier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="20dp"
                        android:hint="@string/login_name"
                        android:inputType="textNoSuggestions"
                        app:validation="@={viewModel.identifier}"
                        app:validationErrorMode="@{viewModel.errorMode}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="20dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        app:validation="@={viewModel.password}"
                        app:validationErrorMode="@{viewModel.errorMode}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/shape_button"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> viewModel.signIn()}"/>

            <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_button"
                    android:text="@string/no_account"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> viewModel.onSignUpClicked()}"/>

            <com.google.android.material.button.MaterialButton
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/reset_password"
                    android:onClick="@{() -> viewModel.onPasswordResetClicked()}"/>
        </LinearLayout>
    </ScrollView>
</layout>